<resources>
    <string name="app_name">DietMate</string>
    <string name="action_settings">Settings</string>

    <!-- Strings used for fragments for navigation -->
    <string name="title_screen_label">Title Screen Fragment</string>
    <string name="diet_list_label">Diet List Fragment</string>
    <string name="diet_type_label">Diet Type Fragment</string>

    <string name="main_title">DietMate</string>
    <string name="goals_title">What are your goals?</string>
    <string name="weightlifter_title">Do you weightlift?</string>
    <string name="weightlifter_title_brackets">(If you answer yes, your diet will have increased protein to facilitate muscle growth)</string>
    <string name="userstats_title">Please enter your details:</string>
    <string name="activitylevel_title">How active are you?</string>
    <string name="overweight_title">Are you very overweight or obese?</string>
    <string name="diet_title">Here is your diet:</string>

    <!-- Strings used for buttons -->
    <string name="title_button">Begin</string>

    <string name="new_diet_button">New Diet</string>

    <string name="lose_weight_fast_button">Lose Weight Fast\n0.9kg lost p/w</string>
    <string name="lose_weight_button">Lose Weight\n0.45kg lost p/w</string>
    <string name="maintain_weight_button">Maintain Weight</string>
    <string name="gain_weight_button">Gain Weight\n0.45kg gained p/w</string>
    <string name="gain_weight_fast_button">Gain Weight Fast\n0.9kg p/w</string>

    <string name="yes_button">Yes</string>
    <string name="no_button">No</string>

    <string name="no_exercise_button">I don\'t exercise</string>
    <string name="light_exercise_button">I exercise 1-3 times per week</string>
    <string name="moderate_exercise_button">I exercise 4-5 times per week</string>
    <string name="high_exercise_button">I exercise daily or do intense exercise 3-4 times per week</string>
    <string name="very_high_exercise_button">I do intense exercise 5-7 times per week</string>
    <string name="extra_high_exercise_button">I do intense exercise daily and/or work a very physical job</string>

    <string name="age_text">Age:</string>
    <string name="height_text">Height (cm):</string>
    <string name="weight_text">Weight (kg):</string>
    <string name="gender_text">Gender:</string>
    <string-array name="gender_array">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string name="next_button">Next</string>


    <string name="title_activity_diet_type">DietTypeActivity</string>
    <string name="title_activity_weightlifter">WeightlifterActivity</string>

    <string name="title_activity_main2">---</string>
    <string name="title_activity_user_stats">UserStatsActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_acitivity_level">AcitivityLevelActivity</string>
    <string name="title_activity_display_diet">DisplayDietActivity</string>
    <string name="title_activity_overweight">OverweightActivity</string>
</resources>