<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/TitleScreenFragment">

    <fragment
        android:id="@+id/TitleScreenFragment"
        android:name="com.example.dietmate.TitleFragment"
        android:label="@string/title_screen_label"
        tools:layout="@layout/title_fragment">

        <action
            android:id="@+id/action_TitleFragment_to_DietListFragment"
            app:destination="@id/DietListFragment" />
    </fragment>
    <fragment
        android:id="@+id/DietListFragment"
        android:name="com.example.dietmate.DietListFragment"
        android:label="@string/diet_list_label"
        tools:layout="@layout/diet_list_fragment">

        <action
            android:id="@+id/action_DietListFragment_to_DietTypeFragment"
            app:destination="@id/DietTypeFragment" />
    </fragment>
    <fragment
        android:id="@+id/DietTypeFragment"
        android:name="com.example.dietmate.DietTypeFragment"
        android:label="@string/diet_type_label"
        tools:layout="@layout/diet_type_fragment">

        <action
            android:id="@+id/action_DietListFragment_to_DietTypeFragment"
            app:destination="@id/TitleScreenFragment" />
    </fragment>
</navigation>