<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <TextView
        android:id="@+id/text_goals"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/goals_title"
        android:textSize="30sp"
        android:textColor="#00FF00"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginVertical="20dp"/>


    <Button
        android:id="@+id/button_lose_weight_fast"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:backgroundTint="#00FF00"
        android:text="@string/lose_weight_fast_button"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/button_lose_weight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_goals" />

    <Button
        android:id="@+id/button_lose_weight"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:backgroundTint="#00FF00"
        android:text="@string/lose_weight_button"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/button_lose_weight_fast"
        app:layout_constraintBottom_toTopOf="@id/button_maintain_weight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_maintain_weight"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:backgroundTint="#00FF00"
        android:text="@string/maintain_weight_button"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/button_gain_weight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_lose_weight"/>

    <Button
        android:id="@+id/button_gain_weight"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:backgroundTint="#00FF00"
        android:text="@string/gain_weight_button"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/button_maintain_weight"
        app:layout_constraintBottom_toTopOf="@id/button_gain_weight_fast"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_gain_weight_fast"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:backgroundTint="#00FF00"
        android:text="@string/gain_weight_fast_button"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/button_gain_weight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>