<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <TextView
        android:id="@+id/text_userstats"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/userstats_title"
        android:textSize="30sp"
        android:textColor="#00FF00"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginVertical="20dp"/>

    <TextView
        android:id="@+id/text_age"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:text="@string/age_text"
        android:textSize="20sp"
        android:textColor="#00FF00"
        android:gravity="center"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/edittext_age"
        app:layout_constraintTop_toBottomOf="@id/text_userstats"
        app:layout_constraintBottom_toTopOf="@id/text_height"/>

    <EditText
        android:id="@+id/edittext_age"
        android:layout_width="120dp"
        android:layout_height="40dp"
        app:layout_constraintTop_toBottomOf="@id/text_userstats"
        app:layout_constraintLeft_toRightOf="@id/text_age"
        app:layout_constraintRight_toRightOf="parent"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@id/edittext_height">
        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/text_height"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:text="@string/height_text"
        android:textSize="20sp"
        android:textColor="#00FF00"
        android:gravity="center"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/edittext_height"
        app:layout_constraintTop_toBottomOf="@id/text_age"
        app:layout_constraintBottom_toTopOf="@id/text_weight"/>

    <EditText
        android:id="@+id/edittext_height"
        android:layout_width="120dp"
        android:layout_height="40dp"
        app:layout_constraintLeft_toRightOf="@id/text_height"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edittext_age"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@id/edittext_weight">
    </EditText>

    <TextView
        android:id="@+id/text_weight"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:text="@string/weight_text"
        android:textSize="20sp"
        android:textColor="#00FF00"
        android:gravity="center"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/edittext_weight"
        app:layout_constraintTop_toBottomOf="@id/text_height"
        app:layout_constraintBottom_toTopOf="@id/text_gender"/>

    <EditText
        android:id="@+id/edittext_weight"
        android:layout_width="120dp"
        android:layout_height="40dp"
        app:layout_constraintLeft_toRightOf="@id/text_weight"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edittext_height"
        app:layout_constraintBottom_toTopOf="@id/spinner_gender"

        android:gravity="center">
    </EditText>

    <TextView
        android:id="@+id/text_gender"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:text="@string/gender_text"
        android:textSize="20sp"
        android:textColor="#00FF00"
        android:gravity="center"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/spinner_gender"
        app:layout_constraintTop_toBottomOf="@id/text_weight"
        app:layout_constraintBottom_toTopOf="@id/button_next"/>

    <Spinner
        android:id="@+id/spinner_gender"
        android:layout_width="120dp"
        android:layout_height="40dp"
        app:layout_constraintTop_toBottomOf="@id/edittext_weight"
        app:layout_constraintLeft_toRightOf="@id/text_gender"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/button_next"/>

    <Button
        android:id="@+id/button_next"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/next_button"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        android:backgroundTint="#00FF00"/>

</androidx.constraintlayout.widget.ConstraintLayout>